--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Hire Freelancers &amp; Find Freelance Jobs Online | Freelancer</title>
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
     
