Create navbar and add login and sign up files

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
     <link rel="stylesheet" href="styles/responsive.css">
 </head>
 <body>
-    
+    <!--- header --->
+    <header class='header'>
+        <nav class="nav container-fluid">
+            <div class="nav-content container">
+                <ul class="nav-menu">
+                    <li class="nav-menu_item">
+                        <a href="https://www.freelancer.com/" class="nav-logo">
+                            <img src="images/logo.svg" alt="Freelance logo">
+                        </a>
+                    </li>
+                    <li class="nav-menu_item">
+                        <a href="#" class="nav-menu_link">How It Works</a>
+                    </li>
+                    <li class="nav-menu_item">
+                        <a href="#" class="nav-menu_link">Browse Jobs</a>
+                    </li>
+                </ul>
+                <ul class="nav-links">
+                    <li class="nav-links_item">
+                    <a href="Login.html" class="nav-link_links">Log In</a>
+                    </li>
+                    <li class="nav-links_item">
+                    <a href="Sign Up.html" class="nav-link_links">Sign Up</a>
+                    </li>
+                    <li class="nav-links_item">
+                    <a href="#" class="nav-link_links">Post a Project</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 </body>
 </html>
