Fix some bugs in responsive mode and add header menu

--- a/index.html
+++ b/index.html
@@ -40,6 +40,17 @@
                 </ul>
             </div>
         </nav>
+        <nav class="header-navbar container-fluid">
+            <div class="header-navbar_content container">
+                <ul class="header-navbar_menu">
+                    <li class="header-navbar_item"><a href="#">Find Jobs</a></li>
+                    <li class="header-navbar_item"><a href="#">Hire Freelancers</a></li>
+                    <li class="header-navbar_item"><a href="#">Get Ideas</a></li>
+                    <li class="header-navbar_item"><a href="#">About</a></li>
+                    <li class="header-navbar_item"><a href="#">Resources</a></li>
+                </ul>
+            </div>
+        </nav>
     </header>
 </body>
 </html>
