Add header and brands section with responsive them

--- a/index.html
+++ b/index.html
@@ -1,56 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hire Freelancers &amp; Find Freelance Jobs Online | Freelancer</title>
-    <link rel="stylesheet" href="styles/normalize.css">
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="stylesheet" href="styles/responsive.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>
+      Hire Freelancers &amp; Find Freelance Jobs Online | Freelancer
+    </title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <link rel="stylesheet" href="styles/normalize.css" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <link rel="stylesheet" href="styles/responsive.css" />
+  </head>
+  <body>
     <!--- header --->
-    <header class='header'>
-        <nav class="nav container-fluid">
-            <div class="nav-content container">
-                <ul class="nav-menu">
-                    <li class="nav-menu_item">
-                        <a href="https://www.freelancer.com/" class="nav-logo">
-                            <img src="images/logo.svg" alt="Freelance logo">
-                        </a>
-                    </li>
-                    <li class="nav-menu_item">
-                        <a href="#" class="nav-menu_link">How It Works</a>
-                    </li>
-                    <li class="nav-menu_item">
-                        <a href="#" class="nav-menu_link">Browse Jobs</a>
-                    </li>
-                </ul>
-                <ul class="nav-links">
-                    <li class="nav-links_item">
-                    <a href="Login.html" class="nav-link_links">Log In</a>
-                    </li>
-                    <li class="nav-links_item">
-                    <a href="Sign Up.html" class="nav-link_links">Sign Up</a>
-                    </li>
-                    <li class="nav-links_item">
-                    <a href="#" class="nav-link_links">Post a Project</a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <nav class="header-navbar container-fluid">
-            <div class="header-navbar_content container">
-                <ul class="header-navbar_menu">
-                    <li class="header-navbar_item"><a href="#">Find Jobs</a></li>
-                    <li class="header-navbar_item"><a href="#">Hire Freelancers</a></li>
-                    <li class="header-navbar_item"><a href="#">Get Ideas</a></li>
-                    <li class="header-navbar_item"><a href="#">About</a></li>
-                    <li class="header-navbar_item"><a href="#">Resources</a></li>
-                </ul>
-            </div>
-        </nav>
+    <header class="header">
+      <nav class="nav container-fluid">
+        <div class="nav-content container">
+          <ul class="nav-menu">
+            <li class="nav-menu_item">
+              <a href="https://www.freelancer.com/" class="nav-logo">
+                <img src="images/site-logo.svg" alt="Freelance logo" />
+              </a>
+            </li>
+            <li class="nav-menu_item">
+              <a href="#" class="nav-menu_link">How It Works</a>
+            </li>
+            <li class="nav-menu_item">
+              <a href="#" class="nav-menu_link">Browse Jobs</a>
+            </li>
+          </ul>
+          <ul class="nav-links">
+            <li class="nav-links_item">
+              <a href="Login.html" class="nav-link_links">Log In</a>
+            </li>
+            <li class="nav-links_item">
+              <a href="Sign Up.html" class="nav-link_links">Sign Up</a>
+            </li>
+            <li class="nav-links_item">
+              <a href="#" class="nav-link_links">Post a Project</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+      <nav class="header-navbar container-fluid">
+        <div class="header-navbar_content container">
+          <ul class="header-navbar_menu">
+            <li class="header-navbar_item"><a href="#">Find Jobs</a></li>
+            <li class="header-navbar_item"><a href="#">Hire Freelancers</a></li>
+            <li class="header-navbar_item"><a href="#">Get Ideas</a></li>
+            <li class="header-navbar_item"><a href="#">About</a></li>
+            <li class="header-navbar_item"><a href="#">Resources</a></li>
+          </ul>
+        </div>
+      </nav>
+      <div class="header-container container-fluid">
+        <div class="header-content container">
+          <h1 class="header-title">
+            Hire the best freelancers for any job, online.
+          </h1>
+          <ul class="header-desc_menu">
+            <li class="header-desc_item">
+              World's largest freelance marketplace
+            </li>
+            <li class="header-desc_item">Any job you can possibly think of</li>
+            <li class="header-desc_item">
+              Save up to 90% & get quotes for free
+            </li>
+            <li class="header-desc_item">Pay only when you're 100% happy</li>
+          </ul>
+          <div class="header-btn_container">
+            <a href="#" class="header-btn">Hire a Freelancer</a>
+            <a href="#" class="header-btn">Earn Money Freelancing</a>
+          </div>
+        </div>
+      </div>
     </header>
-</body>
+    <!-- main -->
+    <section class="brands">
+      <!-- Desktop mode -->
+      <div class="brands-content container">
+        <img src="./images/amazon_logo2.svg" alt="logo" />
+        <img src="./images/facebook-corporate-logo2.svg" alt="logo" />
+        <img src="./images/deloitte-logo2.svg" alt="logo" />
+        <img src="./images/nasa-logo3.svg" alt="logo" />
+        <img src="./images/ibm-logo2.svg" alt="logo" />
+        <img src="./images/airbus-logo2.svg" alt="logo" />
+        <img src="./images/telstra-logo.svg" alt="logo" />
+        <img src="./images/fujitsu-logo.svg" alt="logo" />
+        <img src="./images/google-logo.svg" alt="logo" />
+      </div>
+      <!-- Mobile mode -->
+      <p>As used by</p>
+      <div class="swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="images/amazon_logo2.svg" alt="logo" />
+            <img src="images/facebook-corporate-logo2.svg" alt="logo" />
+            <img src="images/deloitte-logo2.svg" alt="logo" />
+          </div>
+          <div class="swiper-slide">
+            <img src="images/nasa-logo3.svg" alt="logo" />
+            <img src="images/ibm-logo2.svg" alt="logo" />
+            <img src="images/airbus-logo2.svg" alt="logo" />
+          </div>
+          <div class="swiper-slide">
+            <img src="images/telstra-logo.svg" alt="logo" />
+            <img src="images/fujitsu-logo.svg" alt="logo" />
+            <img src="images/google-logo.svg" alt="logo" />
+          </div>
+        </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+    </section>
+    <script>
+      const swiper = new Swiper(".swiper", {
+        // Optional parameters
+        direction: "horizontal",
+        loop: true,
+
+        // Navigation arrows
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+      });
+    </script>
+  </body>
 </html>
