Add description sections and fix some bugs

--- a/index.html
+++ b/index.html
@@ -118,6 +118,120 @@
         <div class="swiper-button-next"></div>
       </div>
     </section>
+    <section class="description container">
+      <h1 class="description-title">Need something done?</h1>
+      <ul class="description-cards">
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/post-a-project.svg" alt="image" />
+            <h3>Post a job</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              It’s free and easy to post a job. Simply fill in a title,
+              description and budget and competitive bids come within minutes.
+            </p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/work.svg" alt="image" />
+            <h3>
+              Choose <br />
+              freelancers
+            </h3>
+          </div>
+          <div class="description-body">
+            <p>
+              No job is too big or too small. We've got freelancers for jobs of
+              any size or budget, across 1800+ skills. No job is too complex. We
+              can get it done!
+            </p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/pay-safely.svg" alt="image" />
+            <h3>Pay safely</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              Only pay for work when it has been completed and you're 100%
+              satisfied with the quality using our milestone payment system.
+            </p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/about-me.svg" alt="image" />
+            <h3>We’re here to help</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              Our talented team of recruiters can help you find the best
+              freelancer for the job and our technical co-pilots can even manage
+              the project for you.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="description container">
+      <h1 class="description-title">What's great about it?</h1>
+      <ul class="description-cards">
+        <li class="description-card">
+          <div class="description-card_header">
+            <img
+              src="images/section-images/browse-portfolios.svg"
+              alt="image"
+            />
+            <h3>Browse portfolios</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              Find professionals you can trust by browsing their samples of
+              previous work and reading their profile reviews.
+            </p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/bids-alt.svg" alt="image" />
+            <h3>Fast bids</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              Receive obligation free quotes from our talented freelancers fast.
+              80% of projects get bid on within 60 seconds.
+            </p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/rank-higher.svg" alt="image" />
+            <h3>Quality work</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              Freelancer.com has by far the largest pool of quality freelancers
+              globally- over 50 million to choose from.
+            </p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header">
+            <img src="images/section-images/track-progress.svg" alt="image" />
+            <h3>Track progress</h3>
+          </div>
+          <div class="description-body">
+            <p>
+              Keep up-to-date and on-the-go with our time tracker, and mobile
+              app. Always know what freelancers are up to.
+            </p>
+          </div>
+        </li>
+      </ul>
+    </section>
     <script>
       const swiper = new Swiper(".swiper", {
         // Optional parameters
