Add product description section and fix some bugs in login and sign in forms

--- a/Login.html
+++ b/Login.html
@@ -9,7 +9,7 @@
   <body>
     <div class="container">
       <form class="form" id="form">
-        <img src="images/logo.svg" alt="logo" />
+        <img src="images/site-logo.svg" alt="logo" />
         <h2>Welcome back</h2>
         <div class="form-control">
           <label for="Username">Username</label>
