--- a/Sign Up.html
+++ b/Sign Up.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <form id="form" class="form">
-        <img src="images/logo.svg" alt="logo" />
+        <img src="images/site-logo.svg" alt="logo" />
         <h2>Sign Up</h2>
         <div class="form-control">
           <label for="username">Username</label>
