--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" title="Hire Freelancers &amp; Find Freelance Jobs Online">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -17,36 +17,36 @@
     <link rel="stylesheet" href="styles/responsive.css" />
   </head>
   <body>
+    <nav class="nav container-fluid">
+      <div class="nav-content container">
+        <ul class="nav-menu">
+          <li class="nav-menu_item">
+            <a href="https://www.freelancer.com/" class="nav-logo">
+              <img src="images/site-logo.svg" alt="Freelance logo" />
+            </a>
+          </li>
+          <li class="nav-menu_item">
+            <a href="#" class="nav-menu_link">How It Works</a>
+          </li>
+          <li class="nav-menu_item">
+            <a href="#" class="nav-menu_link">Browse Jobs</a>
+          </li>
+        </ul>
+        <ul class="nav-links">
+          <li class="nav-links_item">
+            <a href="Login.html" class="nav-link_links">Log In</a>
+          </li>
+          <li class="nav-links_item">
+            <a href="Sign Up.html" class="nav-link_links">Sign Up</a>
+          </li>
+          <li class="nav-links_item">
+            <a href="#" class="nav-link_links">Post a Project</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
     <!--- header --->
     <header class="header">
-      <nav class="nav container-fluid">
-        <div class="nav-content container">
-          <ul class="nav-menu">
-            <li class="nav-menu_item">
-              <a href="https://www.freelancer.com/" class="nav-logo">
-                <img src="images/site-logo.svg" alt="Freelance logo" />
-              </a>
-            </li>
-            <li class="nav-menu_item">
-              <a href="#" class="nav-menu_link">How It Works</a>
-            </li>
-            <li class="nav-menu_item">
-              <a href="#" class="nav-menu_link">Browse Jobs</a>
-            </li>
-          </ul>
-          <ul class="nav-links">
-            <li class="nav-links_item">
-              <a href="Login.html" class="nav-link_links">Log In</a>
-            </li>
-            <li class="nav-links_item">
-              <a href="Sign Up.html" class="nav-link_links">Sign Up</a>
-            </li>
-            <li class="nav-links_item">
-              <a href="#" class="nav-link_links">Post a Project</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
       <nav class="header-navbar container-fluid">
         <div class="header-navbar_content container">
           <ul class="header-navbar_menu">
@@ -228,6 +228,224 @@
               Keep up-to-date and on-the-go with our time tracker, and mobile
               app. Always know what freelancers are up to.
             </p>
+          </div>
+        </li>
+      </ul>
+    </section>
+    <section class="description container">
+      <h1 class="description-title product-title">
+        Make it Real with Freelancer.
+      </h1>
+      <p class="description-paragraph">
+        Get some Inspirations from 1800+ skills
+      </p>
+      <ul class="description-cards products">
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/logo-design-v2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/package-design-1-v2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/mobile-design-1-v2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/wordpress-1.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/logo-design-2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/website-1.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/website-design-1.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/illustration-v2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/wordpress-2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/package-design-4.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/mobile-design-2-v2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/package-design-3.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/website-2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/3d-modeling.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/logo-design-3.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
+          </div>
+        </li>
+        <li class="description-card">
+          <div class="description-card_header product-header">
+            <img
+              class="product-image"
+              src="images/product-images/graphic-design-2.jpg"
+              alt="image"
+            />
+            <span class="product-button">Discover More</span>
+          </div>
+          <div class="description-body">
+            <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
           </div>
         </li>
       </ul>
