Add information section

--- a/index.html
+++ b/index.html
@@ -448,7 +448,33 @@
             <p class="product-info">Logo Design.<br />$30 USD in 1 day.</p>
           </div>
         </li>
+        <a href="#" class="description-btn">View More Projects</a>
       </ul>
+    </section>
+    <section class="information">
+      <aside class="left-section">
+        <div class="left-section_content">
+          <h2 class="information-title">Freelancer API.</h2>
+          <h3 class="information-desc">50 million professionals <br> on demand</h3>
+          <p class="information-paragraph">
+            Why hire people when you can simply integrate our talented <br> cloud
+            workforce instead?
+          </p>
+          <a href="#" class="information-btn">View Documentation</a>
+        </div>
+      </aside>
+      <aside class="right-section">
+        <div class="right-section_content">
+          <h2 class="information-title">Freelancer Enterprise.</h2>
+          <h3 class="information-desc">
+            Company budget?<br>Get more done for less
+          </h3>
+          <p class="information-paragraph">
+            Use our workforce of 50 million to help your business <br> achieve more.
+          </p>
+          <a href="#" class="information-btn">Contact Us</a>
+        </div>
+      </aside>
     </section>
     <script>
       const swiper = new Swiper(".swiper", {
