Add footer and fix some bugs in other parts

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>
       Hire Freelancers &amp; Find Freelance Jobs Online | Freelancer
     </title>
+    <link rel="stylesheet" href=
+      "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.css">
+    </link>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"
@@ -476,6 +479,106 @@
         </div>
       </aside>
     </section>
+    <footer class='footer container-fluid'>
+      <div class="footer-content container">
+        <div class="footer__column">
+          <div class="footer__grouping">
+            <ul class="footer__grouping-list">
+              <li><img src="./images/freelancer-logo-old-light.svg" alt="logo"></li>
+              <li><i class="footer-icon fas fa-globe"></i><a class='footer-link' href='#'>US (International) / English</a></li>
+              <li><i class='footer-icon fas fa-question-circle'></i><a class='footer-link' href='#'>Help & Support</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__grouping">
+            <h4 class="footer__grouping-title">Freelancer</h4>
+            <ul class="footer__grouping-list">
+              <li><a href='#'>Categories</a></li>
+              <li><a href='#'>Projects</a></li>
+              <li><a href='#'>Contests</a></li>
+              <li><a href='#'>Freelancers</a></li>
+              <li><a href='#'>Enterprise</a></li>
+              <li><a href='#'>Membership</a></li>
+              <li><a href='#'>Preferred Freelancer Program</a></li>
+              <li><a href='#'>Project Management</a></li>
+              <li><a href='#'>Local Jobs</a></li>
+              <li><a href='#'>Photo Anywhere</a></li>
+              <li><a href='#'>Showcase</a></li>
+              <li><a href='#'>API for Developers</a></li>
+              <li><a href='#'>Ger Verified</a></li>
+              <li><a href='#'>Desktop App</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__grouping">
+            <h4 class="footer__grouping-title">About</h4>
+            <ul class="footer__grouping-list">
+              <li><a href='#'>About us</a></li>
+              <li><a href='#'>How it Works</a></li>
+              <li><a href='#'>Careers</a></li>
+              <li><a href='#'>Security</a></li>
+              <li><a href='#'>Investor</a></li>
+              <li><a href='#'>Sitemap</a></li>
+              <li><a href='#'>Stories</a></li>
+              <li><a href='#'>News</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__grouping">
+            <h4 class="footer__grouping-title">Terms</h4>
+            <ul class="footer__grouping-list">
+              <li><a href='#'>Privacy Policy</a></li>
+              <li><a href='#'>Terms and Conditions</a></li>
+              <li><a href='#'>Copyright Policy</a></li>
+              <li><a href='#'>Code of Conduct</a></li>
+              <li><a href='#'>Fees and Charges</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__grouping">
+            <h4 class="footer__grouping-title">Partners</h4>
+            <ul class="footer__grouping-list">
+              <li><a href='#'>Escrow.com</a></li>
+              <li><a href='#'>Loadshift</a></li>
+              <li><a href='#'>Warrior Forum</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="footer__column">
+          <div class="footer__grouping">
+            <h4 class="footer__grouping-title m-left-14">Apps</h4>
+            <ul class="footer__grouping-list links-container">
+              <li><a href='#'><img src="./images/app-store.svg" alt="AppStore"></a></li>
+              <li><a href='#'><img src="./images/google-play.svg" alt="PlayStore"></a></li>
+            </ul>
+            <ul class='social-media_menu'>
+              <li><a class='social-media_item fab fa-facebook' href="#"></a></li>
+              <li><a class='social-media_item fab fa-twitter' href="#"></a></li>
+              <li><a class='social-media_item fab fa-youtube' href="#"></a></li>
+              <li><a class='social-media_item fab fa-instagram' href="#"></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <section class='footer-copyright container'>
+        <p class="copyright-reg">
+          <span>63,585,275</span><br>
+          Registered Users
+        </p>
+        <p class="copyright-total">
+          <span>22,174,110</span><br>
+          Total Jobs Posted
+        </p>
+        <p class='copyright-desc'>
+          Freelancer ® is a registered Trademark of Freelancer Technology Pty Limited (ACN 142 189 759)
+          Copyright © 2022 Freelancer Technology Pty Limited (ACN 142 189 759)
+        </p>
+      </section>
+    </footer>
     <script>
       const swiper = new Swiper(".swiper", {
         // Optional parameters
